--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,103 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  background-color: black
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+   
+  background-color: black;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
 
 a {
   color: inherit;
   text-decoration: none;
 }
+h1{
+ text-align: center;
+ font-size: 50px;
+ color:white
+ ;
+ margin-top: 50px;
+}
+h3{
+ text-align: center;
 
-@media (prefers-color-scheme: dark) {
+
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+   gap:30px;
+   align-items: center; 
+  
+  /* height: 100vh; */
+  flex-direction: column;
+  background-color: black;
+
+}
+
+.notification{
+  border: 2px solid red;
+  
+}
+
+.button{
+  background: rgb(36,27,0);
+  background: linear-gradient(90deg, rgba(36,27,0,1) 0%, rgba(102,59,7,1) 20%, rgba(210,112,13,1) 73%, rgba(57,46,0,1) 100%);
+  width: 30%;
+  border: 2px solid black !important;
+  color:white !important;
+  font-size: 30px;
+  margin-top: 40px;
+  border-radius: 10px;
+}
+.button:hover{
+  background: rgb(36,27,0) !important;
+background: linear-gradient(90deg, rgba(36,27,0,1) 0%, rgba(194,132,57,1) 20%, rgba(239,178,117,1) 73%, rgba(57,46,0,1) 100%) !important;
+  color: black !important;
+}
+
+@media (prefers-color-scheme: dark) or (max-width: 600px){
   html {
     color-scheme: dark;
   }
+  .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  h1{
+    font-size: 30px;
+    margin-top: 30px;
+   }
+   h3{
+    font-size: 15px;
+    margin-top: 10px;
+
+   }
+   .image{
+    margin-top: 50px;
+
+
+   }
+   .button{
+    
+    width: 30%;
+    font-size: 25px;
+    margin-top: 40px;
+    color:white;
+   
+
+  }
+  
 }
